Implementing experience modals with details from resume

--- a/src/index.html
+++ b/src/index.html
@@ -300,23 +300,22 @@
     <div class="portfolio-modal modal fade" id="experienceModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="close-modal" data-dismiss="modal">
-                    <div class="lr">
-                        <div class="rl"></div>
+                <div class="modal-body">
+                    <h2>Staff Software Engineer</h2>
+                    <h4>National Instruments</h4>
+                    <p class="item-intro text-muted">August 2016 - present</p>
+                    <p>Developing driver-level software for NI PXI, a PCI-based platform for automated test, measurement, and control.</p>
+                    <div class="tech">
+                        <h5>Skills &amp; Technologies</h5>
+                        <p>C++, Python, Googletest/Googlemock, Jenkins, Linux, Installers</p>
                     </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <div class="modal-body">
-                                <h2>Staff Software Engineer</h2>
-                                <h4>National Instruments</h4>
-                                <p class="item-intro text-muted">August 2016 - present</p>
-                                <p>Details coming soon.</p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                            </div>
-                        </div>
+                    <div class="accomplishments">
+                        <h5>Notable Accomplishments</h5>
+                        <ul>
+                            <li>Acting as Technical Lead for the software support of NI's latest line of PXI chassis. Features include chassis identification, monitoring, and control.</li>
+                        </ul>
                     </div>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                 </div>
             </div>
         </div>
@@ -326,23 +325,26 @@
     <div class="portfolio-modal modal fade" id="experienceModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="close-modal" data-dismiss="modal">
-                    <div class="lr">
-                        <div class="rl"></div>
+                <div class="modal-body">
+                    <h2>Software Engineer</h2>
+                    <h4>National Instruments</h4>
+                    <p class="item-intro text-muted">July 2014 - August 2016</p>
+                    <p>Developed cross-platform software (both kernel- and user-mode) to assist in the identification, monitoring, and control of NI PXI chassis, embedded controllers, and MXI hardware.</p>
+                    <div class="tech">
+                        <h5>Skills &amp; Technologies</h5>
+                        <p>C++, Python, Googletest/Googlemock, Jenkins, Linux, Installers</p>
                     </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <div class="modal-body">
-                                <h2>Software Engineer</h2>
-                                <h4>National Instruments</h4>
-                                <p class="item-intro text-muted">July 2014 - August 2016</p>
-                                <p>Details coming soon.</p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                            </div>
-                        </div>
+                    <div class="accomplishments">
+                        <h5>Notable Accomplishments</h5>
+                        <ul>
+                            <li>Worked on an Agile team as a major contributor to the development of NI PXI Platform Services.</li>
+                            <li>Designed and implemented component for discovering and providing connectivity information for PXI(e) MXI devices.</li>
+                            <li>Presented at a company-wide technical conference on the adoption of open-source practices within NI, and later defined the official guidelines for contributing to NI's infrastructure components.</li>
+                            <li>Actively mentored new team member, becoming their first point of contact for all questions.</li>
+                            <li>Major contributor to the porting of our software stack to Linux, for the release of NI Linux Real-Time.</li>
+                        </ul>
                     </div>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                 </div>
             </div>
         </div>
@@ -352,23 +354,22 @@
     <div class="portfolio-modal modal fade" id="experienceModal3" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="close-modal" data-dismiss="modal">
-                    <div class="lr">
-                        <div class="rl"></div>
+                <div class="modal-body">
+                    <h2>Software Intern</h2>
+                    <h4>National Instruments</h4>
+                    <p class="item-intro text-muted">May 2013 - Aug 2013</p>
+                    <p>Worked as a team-member of NI's Driver Services group.</p>
+                    <div class="tech">
+                        <h5>Skills &amp; Technologies</h5>
+                        <p>C++, Cross-Platform Development (Windows, Linux, Mac), Googletest, Perforce</p>
                     </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <div class="modal-body">
-                                <h2>Software Intern</h2>
-                                <h4>National Instruments</h4>
-                                <p class="item-intro text-muted">May 2013 - Aug 2013</p>
-                                <p>Details coming soon.</p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                            </div>
-                        </div>
+                    <div class="accomplishments">
+                        <h5>Notable Accomplishments</h5>
+                        <ul>
+                            <li>Implemented XML-based export functionality for NI IO Trace, an application for logging low-level device driver calls.</li>
+                        </ul>
                     </div>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                 </div>
             </div>
         </div>
