fixing spacing around various headers

--- a/src/index.html
+++ b/src/index.html
@@ -94,13 +94,14 @@
                     <h2 class="section-heading">Bio</h2>
                     <p class="large">Software is my passion.</p>
                     <p>I got hooked on programming at a young age. Over years of self-teaching, I developed a thirst for knowledge and a knack for applying what I know in new and interesting ways. This has carried over into my career, where I've earned a reputation for always asking the right questions and putting out high-quality work in the face of complexity.</p>
-                    <p>To me, there is nothing more satisfying than breaking down a problem, building out the pieces of a solution, and watching them come together to bring your vision to life. Technology has an incredible ability to shape the human experience, and my goal is to be a part of a movement that takes us towards a brighter future.</p>
+                    <p>To me, there is nothing more satisfying than breaking down a problem, building out the pieces of a solution, and watching them come together to bring your vision to life.</p>
+                    <p>Technology has an incredible ability to shape the human experience, and my goal is to be a part of a movement that takes us towards a brighter future.</p>
                     <p>My favorite question: "Why not?"</p>
                 </div>
 
                 <!-- Education -->
                 <div class="col-lg-4">
-                    <h2>Education</h2>
+                    <h2 class="section-heading">Education</h2>
                     <p>
                     <span class="text-primary"><b>Texas Tech University</b></span> (Lubbock, TX)<br />
                     B.S. in Computer Engineering, May 2014<br />
@@ -113,7 +114,7 @@
                 <div class="col-lg-4 container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>Skills</h2>
+                            <h2 class="section-heading">Skills</h2>
                         </div>
                     </div>
                     <div class="row">
