Creating base layout for projects with CG showcase

--- a/src/index.html
+++ b/src/index.html
@@ -278,8 +278,31 @@
                     <h3 class="section-subheading text-muted">A selection of my previous works.</h3>
                 </div>
             </div>
+
+            <!-- Chattergram Showcase -->
             <div class="row">
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-md-3">
+                    <img src="/img/projects/chattergram.png" class="img-responsive" alt="">
+                </div>
+                <div class="col-md-9">
+                    <h3 class="project-heading">Chattergram.co <a href="http://chattergram.co">(link)</a></h3>
+                    <h4 class="project-subheading text-muted">May 2015 - present</h4>
+                    <p>Acting as the lead developer for Chattergram, a social media site for creating and sharing memes in real time about current events.</p>
+                    <ul>
+                        <li>Designed and implemented the Chattergram architecture, including user management, content creation tools, support for voting, comments, and notifications, and an e-mail management system.</li>
+                        <li>Leveraged technologies such as Node.js, Express, AngularJS, MongoDB, Java, and Amazon Web Services (EC2, S3, SES, SQS).</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Older Projects -->
+            <div class="row projects-older-heading">
+                <div class="col-md-12">
+                    <h4>Older Projects</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3 col-xs-6 portfolio-item">
                     <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -289,11 +312,11 @@
                         <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Project</h4>
-                        <p class="text-muted">Description of Role</p>
+                        <h4>Animated Dot Image</h4>
+                        <p class="text-muted">Sept 2014</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-sm-3 col-xs-6 portfolio-item">
                     <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -303,11 +326,11 @@
                         <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Project</h4>
-                        <p class="text-muted">Description of Role</p>
+                        <h4>Java 2048</h4>
+                        <p class="text-muted">Mar 2014</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-sm-3 col-xs-6 portfolio-item">
                     <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -317,11 +340,11 @@
                         <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Project</h4>
-                        <p class="text-muted">Description of Role</p>
+                        <h4>Lazors Sim</h4>
+                        <p class="text-muted">Apr 2013</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-sm-3 col-xs-6 portfolio-item">
                     <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -331,11 +354,11 @@
                         <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Project</h4>
-                        <p class="text-muted">Description of Role</p>
+                        <h4>Perlin Noise</h4>
+                        <p class="text-muted">Aug 2012</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-sm-3 col-xs-6 portfolio-item">
                     <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -345,11 +368,11 @@
                         <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Project</h4>
-                        <p class="text-muted">Description of Role</p>
+                        <h4>Pente</h4>
+                        <p class="text-muted">Jul 2012</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-sm-3 col-xs-6 portfolio-item">
                     <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -359,8 +382,64 @@
                         <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Project</h4>
-                        <p class="text-muted">Description of Role</p>
+                        <h4>Flood Fill Game</h4>
+                        <p class="text-muted">Oct 2011</p>
+                    </div>
+                </div>
+                <div class="col-sm-3 col-xs-6 portfolio-item">
+                    <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Dots and Boxes</h4>
+                        <p class="text-muted">Aug 2011</p>
+                    </div>
+                </div>
+                <div class="col-sm-3 col-xs-6 portfolio-item">
+                    <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Ribboning Editor</h4>
+                        <p class="text-muted">Jan 2010</p>
+                    </div>
+                </div>
+                <div class="col-sm-3 col-xs-6 portfolio-item">
+                    <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Snake</h4>
+                        <p class="text-muted">Jun 2009</p>
+                    </div>
+                </div>
+                <div class="col-sm-3 col-xs-6 portfolio-item">
+                    <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Conway's Game of Life</h4>
+                        <p class="text-muted">Dec 2008</p>
                     </div>
                 </div>
             </div>
