--- a/src/index.html
+++ b/src/index.html
@@ -275,7 +275,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Projects</h2>
-                    <h3 class="section-subheading text-muted">A selection of my previous works.</h3>
+                    <h3 class="section-subheading text-muted">Both past and present.</h3>
                 </div>
             </div>
 
@@ -285,7 +285,7 @@
                     <img src="/img/projects/chattergram.png" class="img-responsive" alt="">
                 </div>
                 <div class="col-md-9">
-                    <h3 class="project-heading">Chattergram.co <a href="http://chattergram.co">(link)</a></h3>
+                    <h3 class="project-heading">Chattergram.co <a href="http://chattergram.co" target="_blank">(link)</a></h3>
                     <h4 class="project-subheading text-muted">May 2015 - present</h4>
                     <p>Acting as the lead developer for Chattergram, a social media site for creating and sharing memes in real time about current events.</p>
                     <ul>
@@ -303,13 +303,13 @@
             </div>
             <div class="row">
                 <div class="col-sm-3 col-xs-6 portfolio-item">
-                    <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/maxmccord/MouseOverDotImage" class="portfolio-link" target="_blank">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
+                        <img src="/img/projects/dot-image.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Animated Dot Image</h4>
@@ -317,13 +317,13 @@
                     </div>
                 </div>
                 <div class="col-sm-3 col-xs-6 portfolio-item">
-                    <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/maxmccord/Java2048" class="portfolio-link" target="_blank">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
+                        <img src="/img/projects/java2048.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Java 2048</h4>
@@ -331,13 +331,13 @@
                     </div>
                 </div>
                 <div class="col-sm-3 col-xs-6 portfolio-item">
-                    <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/maxmccord/LazorsSim" class="portfolio-link" target="_blank">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
+                        <img src="/img/projects/lazors-sim.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Lazors Sim</h4>
@@ -345,13 +345,13 @@
                     </div>
                 </div>
                 <div class="col-sm-3 col-xs-6 portfolio-item">
-                    <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/maxmccord/PerlinNoise" class="portfolio-link" target="_blank">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
+                        <img src="/img/projects/perlin-noise.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Perlin Noise</h4>
@@ -359,13 +359,13 @@
                     </div>
                 </div>
                 <div class="col-sm-3 col-xs-6 portfolio-item">
-                    <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/maxmccord/Pente" class="portfolio-link" target="_blank">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
+                        <img src="/img/projects/pente.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Pente</h4>
@@ -373,13 +373,13 @@
                     </div>
                 </div>
                 <div class="col-sm-3 col-xs-6 portfolio-item">
-                    <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/maxmccord/FloodFillGame" class="portfolio-link" target="_blank">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
+                        <img src="/img/projects/floodfill.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Flood Fill Game</h4>
@@ -387,13 +387,13 @@
                     </div>
                 </div>
                 <div class="col-sm-3 col-xs-6 portfolio-item">
-                    <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/maxmccord/TheDotGame" class="portfolio-link" target="_blank">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
+                        <img src="/img/projects/dot-game.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Dots and Boxes</h4>
@@ -401,13 +401,13 @@
                     </div>
                 </div>
                 <div class="col-sm-3 col-xs-6 portfolio-item">
-                    <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/maxmccord/Ribboning" class="portfolio-link" target="_blank">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
+                        <img src="/img/projects/ribboning.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Ribboning Editor</h4>
@@ -415,13 +415,13 @@
                     </div>
                 </div>
                 <div class="col-sm-3 col-xs-6 portfolio-item">
-                    <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/maxmccord/Snake" class="portfolio-link" target="_blank">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
+                        <img src="/img/projects/snake.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Snake</h4>
@@ -429,13 +429,13 @@
                     </div>
                 </div>
                 <div class="col-sm-3 col-xs-6 portfolio-item">
-                    <a href="#experienceModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/maxmccord/ConwaysGameOfLife" class="portfolio-link" target="_blank">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/img/projects/image-placeholder-500x500.jpg" class="img-responsive" alt="">
+                        <img src="/img/projects/game-of-life.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Conway's Game of Life</h4>
