improving formatting of chattergram project on desktop/mobile

--- a/src/index.html
+++ b/src/index.html
@@ -282,12 +282,12 @@
             <!-- Chattergram Showcase -->
             <div class="row">
                 <div class="col-md-3">
-                    <img src="/img/projects/chattergram.png" class="img-responsive" alt="">
+                    <img src="/img/projects/chattergram.png" class="project-logo img-responsive" alt="">
                 </div>
                 <div class="col-md-9">
-                    <h3 class="project-heading">Chattergram.co <a href="http://chattergram.co" target="_blank">(link)</a></h3>
+                    <h3 class="project-heading">Chattergram.co</h3>
                     <h4 class="project-subheading text-muted">May 2015 - present</h4>
-                    <p>Acting as the lead developer for Chattergram, a social media site for creating and sharing memes in real time about current events.</p>
+                    <p>Lead developer for <a href="http://chattergram.co/" target="_blank">chattergram.co</a>, a social media site for creating and sharing memes in real time about current events.</p>
                     <ul>
                         <li>Designed and implemented the Chattergram architecture, including user management, content creation tools, support for voting, comments, and notifications, and an e-mail management system.</li>
                         <li>Leveraged technologies such as Node.js, Express, AngularJS, MongoDB, Java, and Amazon Web Services (EC2, S3, SES, SQS).</li>
