removing footer for now

--- a/src/index.html
+++ b/src/index.html
@@ -488,8 +488,9 @@
     </section>
 
     <!-- Footer -->
-    <footer>
-    </footer>
+    <!-- Add this back in if I ever decide to add a footer. -->
+    <!-- <footer> -->
+    <!-- </footer> -->
 
     <!-- Experience Modal 1 (Staff Software Engineer) -->
     <div class="portfolio-modal modal fade" id="experienceModal1" tabindex="-1" role="dialog" aria-hidden="true">
