--- a/src/index.html
+++ b/src/index.html
@@ -452,7 +452,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact</h2>
-                    <h3 class="section-subheading text-muted">Under construction.</h3>
+                    <h3 class="section-subheading text-muted">Let's get in touch!</h3>
                 </div>
             </div>
             <div class="row">
